Corrected category page carousel clipping issue

--- a/_ac_styles.css
+++ b/_ac_styles.css
@@ -171,6 +171,13 @@ span.ui-state-highlight{
     top:0px !important;
     width: 100%;
 }
+.navTopCat2{
+	height: 100%;
+    position: absolute;
+    top:0px !important;
+    width: 100%;
+	left:0 !important;
+}
 .navBarBrands{
 	background-size:cover;
 	width:120px;
@@ -456,7 +463,7 @@ span.ui-state-highlight{
 
 .dropdown {
 	overflow: hidden;
-	z-index:2;
+	z-index:3;
 	position:absolute;
 }
 .headerDropdown{
@@ -986,7 +993,7 @@ div .catListingCat:hover{
 .carouselCatSearchList ul{
 	float:left;
 	width:1300px;
-	height:1000px;
+	height:1075px;
 }
 #recentlyViewedItemsContainer{
 	float:left;
